CheckList agregar tarea y renderizar todas las tareas

--- a/clientv2/todo-app/src/components/body/checklist.css
+++ b/clientv2/todo-app/src/components/body/checklist.css
@@ -33,3 +33,11 @@
     text-align: center;
     
 }
+
+.formTarea{
+    border: 2px solid blue;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
