--- a/clientv2/todo-app/src/components/body/checklist.css
+++ b/clientv2/todo-app/src/components/body/checklist.css
@@ -18,11 +18,20 @@
 }
 
 .checkItem{
+    border: 1px solid crimson;
     border-radius: 15px;
     padding: 10px;
     background-color: #2c2f33;
+    display: flex;
+    justify-content: space-between;
 }
 
+.checkItem p{
+    border: 1px solid purple;
+}
+.checkItem button{
+    border: 2px solid green;
+}
 .checkItem:hover{
     background-color: aliceblue;
 }
