--- a/clientv2/todo-app/src/index.css
+++ b/clientv2/todo-app/src/index.css
@@ -6,7 +6,7 @@
   font-size: 1.2rem;
   letter-spacing: -1px;
   word-spacing: 2px;
-  color: #000000;
+  color: #7289da;
   font-weight: normal;
   text-decoration: none;
   font-style: normal;
@@ -14,6 +14,9 @@
   text-transform: capitalize;
 }
 
+body{
+    background-color: #23272a;
+}
 
 .half-div{
   
