--- a/clientv2/todo-app/src/components/body/checklist.css
+++ b/clientv2/todo-app/src/components/body/checklist.css
@@ -1,16 +1,20 @@
+@import '../../styles/constants.css';
+
 .checkBody{
     width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #2c2f33;
+    background-color: var(--secondary-black);
     border: 2px solid black;
     border-radius: 10px;
     margin-top: 2vh;
+    margin-bottom: 2vh;
+    padding-bottom: 10px;
 }
 
 .itemWrapper{
-    background-image: linear-gradient(to bottom right, #7289DA, #99aab5);
+    background-image: linear-gradient(to bottom right, var(--main-color), var(--white-gray));
     border-radius: 15px;
     width: 90%;
     padding: 2px;
@@ -20,7 +24,7 @@
 .checkItem{
     border-radius: 15px;
     padding: 10px;
-    background-color: #23272A;
+    background-color: var(--primary-black);
     display: flex;
     justify-content: space-between;
 }
@@ -33,22 +37,20 @@
         border-bottom-left-radius: 10px;
         animation-name: example;
         animation-duration: 0.25s;
-        border-left: 8px solid #7289DA;
+        border-left: 8px solid var(--main-color);
 }
 
 @keyframes example {
-    0%   {border-left: 2px solid #7289DA;}
-    25%  {border-left: 3px solid #7289DA;}
-    50%  {border-left: 4px solid #7289DA;}
-    100% {border-left: 5px solid #7289DA;}
+    0%   {border-left: 2px solid var(--main-color);}
+    25%  {border-left: 3px solid var(--main-color);}
+    50%  {border-left: 4px solid var(--main-color);}
+    100% {border-left: 5px solid var(--main-color);}
 }
 
-.itemName {
-    width: 50%;
-}
+
 
 .checkItem p{
-    color: #7289DA;
+    color: var(--main-color);
 }
 button{
     display: inline-block;
@@ -60,8 +62,8 @@ button{
     height: 45px;
     width: 100px;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
-    background-color: #7289da;
-    border: 2px solid #7289da;
+    background-color: var(--main-color);
+    border: 2px solid var(--main-color);
     color: #fff;
 }
 
@@ -87,7 +89,7 @@ h1{
 }
 
 .detailWrapper{
-    background-image: linear-gradient(to bottom right, #7289DA, #99aab5);
+    background-image: linear-gradient(to bottom right, var(--main-color), var(--white-gray));
     border-radius: 15px;
     padding: 2px;
     margin: 5px 0;
@@ -97,7 +99,7 @@ h1{
 details{
     border-radius: 15px;
     padding: 15px;
-    background-color: #23272A;
+    background-color: var(--primary-black);
 }
 
 .summary{
@@ -113,3 +115,49 @@ details{
     gap: 10px;
 }
 
+#done, #notDone, #streak, #actionCheck{
+    width: 12.5%;
+}
+
+
+
+
+/*ONLY TO DO */
+
+.half-div{
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.itemName {
+    width: 50%;
+    text-align: left;
+}
+
+#tarea{
+    width: 50%;
+}
+
+#state{
+    width: 20%;
+    
+}
+
+#number{
+    width: 10%;
+    
+}
+
+p{
+    text-align: center;
+}
+
+#actions{
+    width: 30%;   
+}
+
+.actions{
+    display: flex;
+    justify-content: space-evenly;
+}
